fix: correctly display flag recipes in rei